Min width and fix scroll indicator on small

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -8,3 +8,5 @@ $header-mobile-width-break: 830px;
 $large-breakpoint: 999999px;
 $medium-breakpoint: 1030px;
 $small-breakpoint: 700px;
+
+$body-min-width: 320px;
